--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -7,12 +7,12 @@
     line-height: 1.5rem;
     font-weight: 500;
     border-radius: 0.375rem;
-    background-color: rgb(255, 53, 17);
+    background-color: #3498db;
     color: white;
 }
 
 .button:hover {
-    background-color: rgb(255, 53, 17);
+    background-color: #056aad;
 }
 
 button:focus {
