--- a/src/layout/layout.styles.css
+++ b/src/layout/layout.styles.css
@@ -1,3 +1,6 @@
 .content{
-  width: calc(100% - 20rem);
+  max-width: calc(100% - 20rem);
+}
+.h-min-content{
+  min-height: calc(100vh - 6rem); 
 }
