chore:input-button-component

--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -3,20 +3,18 @@
     display: block;
     width: 80%;
     --tw-bg-opacity: 1;
-    background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-    --tw-text-opacity: 1;
+    background-color: #EEEEEE;
     color: rgba(55, 65, 81, var(--tw-text-opacity));
     border-width: 1px;
     --tw-border-opacity: 1;
     border-color: rgba(229, 231, 235, var(--tw-border-opacity));
     line-height: 1.25;
     padding: 0.5rem 1rem;
-    border-radius: 10px;
 }
 
 .inputStyle:focus {
     outline: none;
     background-color: white;
     --tw-border-opacity: 1;
-    border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+    border-color: #EEEEEE;
 }
