--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -6,13 +6,12 @@
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 500;
-    border-radius: 0.375rem;
-    background-color: #3498db;
+    background-color: #63b3ed;
     color: white;
 }
 
 .button:hover {
-    background-color: #056aad;
+    background-color: #4299e1;
 }
 
 button:focus {
