--- a/src/components/select/select.module.css
+++ b/src/components/select/select.module.css
@@ -23,7 +23,7 @@ select::-ms-expand {
   min-width: 150px;
   cursor: pointer;
   line-height: 1.1;
-  background-color: #eeeeee;
+  background-color: #e5e7eb;
   padding-right: 10px;
 }
 .select select,
