--- a/src/components/select/select.module.css
+++ b/src/components/select/select.module.css
@@ -23,7 +23,7 @@ select::-ms-expand {
   min-width: 150px;
   cursor: pointer;
   line-height: 1.1;
-  background-color: #eeeeee;
+  background-color: #e5e7eb;
   padding-right: 10px;
 }
 .select select,
@@ -35,6 +35,6 @@ select::-ms-expand {
   justify-self: end;
   width: 0.8em;
   height: 0.5em;
-  background-color: #777;
+  background-color: rgb(82, 82, 82);
   clip-path: polygon(100% 0%, 0 0%, 50% 100%);
 }
